[gd_scene load_steps=6 format=3 uid="uid://cqsrqt6nk0rrj"]

[ext_resource type="Script" path="res://levels/main.gd" id="1_sc4lj"]
[ext_resource type="Texture2D" uid="uid://b2aw0kr84yfgv" path="res://art/gamemenu.png" id="2_l21wr"]
[ext_resource type="Texture2D" uid="uid://dqjb4g4ps7idq" path="res://art/light_or_death title.png" id="3_5aq6k"]
[ext_resource type="AudioStream" uid="uid://bh1lf8g0es1b2" path="res://art/Ludum Dare 28 - Track 7.wav" id="4_cw5aa"]
[ext_resource type="AudioStream" uid="uid://bscnyfnh8k7p7" path="res://art/The Verdant Grove LOOP.wav" id="5_nckes"]

[node name="Main" type="Node"]
script = ExtResource("1_sc4lj")

[node name="WinTimer" type="Timer" parent="."]
wait_time = 600.0
one_shot = true

[node name="MainMenu" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="MainMenu"]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_l21wr")
ignore_texture_size = true

[node name="TextureRect2" type="TextureRect" parent="MainMenu"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -536.5
offset_right = 536.5
offset_bottom = 335.0
grow_horizontal = 2
texture = ExtResource("3_5aq6k")

[node name="Button" type="Button" parent="MainMenu"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.602
anchor_right = 0.5
anchor_bottom = 0.651
offset_left = -98.9999
offset_top = -0.160062
offset_right = 96.4
offset_bottom = -0.0800247
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Start Game"

[node name="TextEdit" type="Label" parent="MainMenu"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -147.0
offset_top = -74.0
offset_right = 147.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "By Peyton Williams"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinPanel" type="Panel" parent="MainMenu"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -3.0
offset_right = 94.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainMenu/WinPanel"]
layout_mode = 0
offset_left = 29.0
offset_top = 24.0
offset_right = 160.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 32
text = "You win!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_cw5aa")
volume_db = -10.0
autoplay = true

[node name="WinAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_nckes")
volume_db = -10.0

[connection signal="timeout" from="WinTimer" to="." method="_on_win_timer_timeout"]
[connection signal="pressed" from="MainMenu/Button" to="." method="_on_button_pressed"]
[connection signal="finished" from="WinAudio" to="." method="_on_win_audio_finished"]
